Fix for mobile sidebar not blocking the body from scrolling when the sidebar does not fit on the screen.

--- a/Whoaverse/Whoaverse/Content/Whoaverse.css
+++ b/Whoaverse/Whoaverse/Content/Whoaverse.css
@@ -2787,6 +2787,11 @@ textarea.form-control {
         height: calc(100vh - 81px);
     }
 
+    body.show-mobile-sidebar {
+        overflow: hidden;
+        height: 100vh;
+    }
+
     .side.show-mobile-sidebar {
         left: -1px;
     }
